# implicit.computer

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  ]  _run.py  build.sh  build_resume.py  build_resume.sh  build_site.py  builder.py  config.toml  convert_zola.py  definitions.py  eleventy.config.js  entrypoint.sh  fly.toml  gitwatch.py  init.sh  main.py  make.sh  package.json  pyproject.toml  requirements.txt  run.py  styles.css  watch-config.json  watch.sh
_site/: index.html
_site/assets/: script.js
_site/blog/: 2-film-reviews.html  activitypub-1.html  activitypub-2.html  anglicization.html  anki-apkg.html  arcane-intelligence.html  austin.html  bald.html  blackmail.html  css-naked-2024.html  eclipse.html  egregore.html  hinterlands.html  hire-me.html  index.html  man-book.html  (+13 more)
content/: _index.md  about.md  feeds.md  now.md
md/: bald.md  python-strings.md  test.md
nginx/: implicit.computer
opt/: check_git.py  on_change.sh
public/: 404.html  atom.xml  ext.css  index.html  quotes.json  robots.txt  rss.xml  script.js  search_index.en.js  sitemap.xml
sass/: ext.scss
scripts/: common.py  mkpost.py  post_build.py  pre_build.py  reorganize.py
services/: rebuild-web.service  watch-file-changes.service
site_src/: Resume  __init__.py  builder.py  server.py  watch.py
src/: index.html  tags.html  tags_index.html
static/: blogroll.css  cards.html  feeds.opml.xml  opml.xsl  quotes.json  resume.html  script.js
templates/: 404.html  base.html  index.html  page.html  post.html  posts-list.html  posts_list.html  robots.txt
(+265 files in other folders)
