[tool.poetry]
name = "static-site"
version = "0.1.0"
description = ""
authors = ["Keaton Guderian <keagud@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"
Jinja2 = "^3.1.2"
bs4 = "^0.0.1"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
ruff = "^0.1.1"
pyright = "^1.1.332"
isort = "^5.12.0"
ipython = "^8.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
